skeleton sample service